# diff_excel

./: .gitignore  LICENSE  Pipfile  README.rst  pyproject.toml  setup.cfg  setup.py
diff_excel/: __main__.py  core.py  helpers.py
docs/: Makefile  conf.py  index.rst
docs/_modules/: diff_excel.rst
tests/: context.py  test_core.py  test_helper.py
tests/test_data/: delete_row_column_book.xlsx  from_book.xlsx  insert_delete_book.xlsx  insert_row_column_book.xlsx  to_book.xlsx
