[tool.poetry]
name = "diff_excel"
version = "0.1.0"
description = ""
authors = ["tthmmts <tthmmts@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
xlrd = "^1.2.0"
openpyxl = "^3.0.3"
pandas = "^0.25.3"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]
sphinx = "^2.3.1"
nose = "^1.3.7"
autopep8 = "^1.4.4"
sphinxcontrib-apidoc = "^0.3.0"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
