[metadata]
name = diff_excel
version = attr: diff_excel.__main__.__version__
author = tthmmts
author_email = tthmmts@gmail.com
license = MIT License
license_file = file: LICENSE
description = 2つのエクセルデータを比較する
url = https://github.com/tthmmts
long_description = file: README.rst
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: Japanese
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Utilities

[options]
zip_safe = False
packages = find:
install_requires =
    numpy
    openpyxl
    xlrd
    pytz
    pandas
    docopt
test_suite = tests
python_requires = >= 3.5.*
setup_requires =
    setuptools >= 30.0.3.0

[options.entry_points]
console_scripts =
    diff_excel = diff_excel.__main__:main

[build_sphinx]
project = 'diff_excel'
version = attr: diff_excel.__main__.__version__
release = attr: diff_excel.__main__.__version__
source-dir = 'docs'